# computational-geometry

./: CMakeLists.txt  README.md
src/: A.aplusb.cpp  B.intersection.cpp  C.closest.cpp  E.convexhull.cpp  G.semiplanes.cpp  H.inside.cpp  I.inside2.cpp  J.earclipping.cpp  K.nearest.cpp  L.diameter.cpp  M.finite.cpp  N.mindisc.cpp
